# singularity

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  Makefile  issues.md  plan.md  plan.txt  readme.md  rustfmt.toml  setup.sh  todo.md  todo.txt
client/: Cargo.toml
client/archive/: Makefile  config.h  map.cpp  map.h  result.h  state.h
client/shader/: blur.fs.glsl  blur.glsl  exit_icon.fs.glsl  fxaa.fs.glsl  util.fs.glsl
client/src/: app.h  button.rs  color.rs  config.h  config.rs  connect.rs  engine.cpp  engine.h  engine.rs  error.rs  font.rs  game.rs  input.rs  lib.rs  main.rs  map.cpp  map.h  map.rs  player.h  player.rs  shader.rs  socket.rs  stage.rs  state.h  state.rs  texture.rs  title.rs  util.h  util.rs
client/src/archive/: engine.cpp  player.cpp
client/src/archive/test/: test.cpp
client/src/facility/: control_center.rs  draw.rs  facility.rs  metal_extractor.rs  mod.rs  oil_extractor.rs
client/src/game/: draw.rs  init.rs  input.rs  mod.rs  state.rs
client/src/map/: config.rs  coordinate.rs  draw.rs  init.rs  input.rs  mod.rs  state.rs
client/src/math/: color.rs  consts.rs  mod.rs  rectangle.rs  text.rs
client/src/player/: init.rs  mod.rs  state.rs
client/src/shader/: exit_icon.rs  mod.rs  shader.rs
client/src/stage/: draw.rs  input.rs  mod.rs  stage.rs
client/src/title/: draw.rs  init.rs  input.rs  mod.rs  state.rs  title.rs
client/src/window/: draw.rs  error.rs  hex.rs  input.rs  mod.rs  pause.rs  state.rs  window.rs
lib/raylib/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
lib/raylib/examples/: Makefile  audio_mixed_processor  audio_music_stream  (+158 more)
macros/: Cargo.toml
macros/src/: facility_collection.rs  lib.rs
server/: .gitignore  Cargo.toml
server/src/: environment.rs  error.rs  lib.rs  listen.rs  main.rs  monitor.rs  protocol.rs  ring_buffer.rs  route.rs  socket.rs
server/src/network/: connection.rs  frame.rs  mod.rs  protocol.rs  ring_buffer.rs  socket.rs
shared/: Cargo.toml
shared/src/: environment.rs  lib.rs  random.rs  util.rs
src/: app.h  engine.cpp  engine.h  main.cpp  map.cpp  map.h  result.h  state.h  util.h
test/: test.cpp
(+8 files in other folders)
