[workspace]
resolver = "3"
members = ["server", "client"]

[workspace.dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
dotenvy = { version = "0.15" }
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7" }
socket2 = { version = "0.6" }
uuid = { version = "1.18" }
rand = { version = "0.9" }
futures = { version = "0.3" }
raylib = { version = "5.5" }
