[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
socket2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
raylib = { workspace = true }
map = "1.3.0"
