[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
socket2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
